# learn-webgpu

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
common/: CMakeLists.txt  util_platform_darwin.mm  util_platform_linux.cc  utils.cc  utils.hpp
depth-buffer/: CMakeLists.txt  depth-triangle.wgsl  main.cc
hello-instance/: CMakeLists.txt  main.cc
msaa-resolve/: CMakeLists.txt  buffer.wgsl  main.cc
render-loop/: CMakeLists.txt  main.cc
render-pipeline/: CMakeLists.txt  main.cc
uniform-buffer/: CMakeLists.txt  main.cc
